--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="../Icons/PageFavicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="../Javascript/PlaylistCreator.js"></script>
-        <script defer src="../howler.js"></script>
+        <!-- <script defer src="../howler.js"></script> -->
         <script src="../Javascript/ServiceWorker.js"></script>
         <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
         <!-- <link rel="stylesheet" id="compactModeStyleLink" href="../CSS/CompactMode.css" disabled> -->
