--- a/HTML/WebLooper.html
+++ b/HTML/WebLooper.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="../Icons/PageFavicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="../Javascript/WebLooper.js"></script>
-        <script defer src="../howler.js"></script>
+        <!-- <script defer src="../howler.js"></script> -->
         <script src="../Javascript/ServiceWorker.js"></script>
         <link rel="stylesheet" href="../CSS/WebLooper.css">
         <link rel="stylesheet" href="../CSS/background.css">
