move service worker to project root. to see if better scoping fixes the issues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Choose Player</title>
     <link rel="icon" href="Icons/PageFavicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="Javascript/ServiceWorker.js"></script>
+    <script src="ServiceWorker.js"></script>
     <link rel="stylesheet" href="CSS/background.css">
   </head>
 
