auto-registering service worker wont work in my setup, so i just put the register code in every .ts instead

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="../Javascript/PlaylistCreator.js"></script>
         <!-- <script defer src="../howler.js"></script> -->
-        <script src="../ServiceWorker.js"></script>
+        <!-- <script src="../ServiceWorker.js"></script> -->
         <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
         <!-- <link rel="stylesheet" id="compactModeStyleLink" href="../CSS/CompactMode.css" disabled> -->
         <link rel="stylesheet" href="../CSS/background.css">
