--- a/HTML/WebLooper.html
+++ b/HTML/WebLooper.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script defer src="../Javascript/WebLooper.js"></script>
         <!-- <script defer src="../howler.js"></script> -->
-        <script src="../ServiceWorker.js"></script>
+        <!-- <script src="../ServiceWorker.js"></script> -->
         <link rel="stylesheet" href="../CSS/WebLooper.css">
         <link rel="stylesheet" href="../CSS/background.css">
         <!-- August 27, 2023, 12:33AM -->
