--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <title>Choose Player</title>
     <link rel="icon" href="Icons/PageFavicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="ServiceWorker.js"></script>
+    <!-- <script src="ServiceWorker.js"></script> -->
     <link rel="stylesheet" href="CSS/background.css">
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("ServiceWorker.js");
+      }
+    </script>
   </head>
 
   <body>
