add deprecated message for old site host

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -148,6 +148,13 @@
                 </div>
             </div>
         </dialog>
+        <dialog id="deprecatedPopup">
+            <img class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+            <div>
+                THIS WEBSITE URL IS INACTIVE AND COULD POSSIBLY BREAK IN THE FUTURE. THE NEW LINK IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
+            </div>
+            
+        </dialog>
 
         <div id="rightClickContextMenu" open="false">
             <div class="contextOption"></div>
