optimize song loading, clean up unused workspace files, improve deprecated warning for CodeHS (project can now be copy and pasted between the two hosts without needing to change code). Make "Powered by Howler.js" clickable links.

--- a/HTML/WebLooper.html
+++ b/HTML/WebLooper.html
@@ -16,9 +16,9 @@
             <h1 style="border:1px solid black; background-color:white">
                 <font style="color:black; font-family: Cambria">Web Looper</font>
             </h1>
-            <h2>
-                <font style="font-size: 15px; color:black; font-family: Cambria">Powered by Howler.js</font>
-            </h2>
+            <h5 style="text-align: center;">
+                <a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com">Powered by Howler.js</a>
+            </h5>
 
             <input type="file" style="margin-left:5px; margin-right:5px; width:90px; color:transparent;" multiple=true title="Drag audios here to batch upload them!" id="batchUpload"/>
             <label for="batchUpload" style="position: relative; top: 1px;">Add files here to batch upload</label>
