--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -26,14 +26,16 @@
 
         <table border=1px style="position: absolute; width:calc(100% - 20px); top:40vh; transform: translate(0%, 0%); z-index: -2;">
             <tbody>
-                <td style="position: absolute; width:100%; white-space: nowrap; transform: translate(0%, -100%); height: 10ch;">
-                    <div style="margin-left: auto; margin-right: auto; text-align: center;">
-                        <div class="fileStatus" id="0status"></div>
-                        <text id="firstDurationLabel" style="margin-right: 1ch;">00:00</text>
-                        <progress value="0" max="100" id="progress-bar" style="accent-color:white; z-index: 0;"></progress>
-                        <text id="secondDurationLabel" style="margin-left: 1ch;">00:00</text>
-                    </div>
-                </td>
+                <tr>
+                    <td style="position: absolute; width:100%; white-space: nowrap; transform: translate(0%, -100%); height: 10ch;">
+                        <div style="margin-left: auto; margin-right: auto; text-align: center;">
+                            <div class="fileStatus" id="0status"></div>
+                            <text id="firstDurationLabel" style="margin-right: 1ch;">00:00</text>
+                            <progress value="0" max="100" id="progress-bar" style="accent-color:white; z-index: 0;"></progress>
+                            <text id="secondDurationLabel" style="margin-left: 1ch;">00:00</text>
+                        </div>
+                    </td>
+                </tr>
                 <tr>
                     <td id="skipBack" class="cell clickableButton" width=20%>
                         <img class="playBackIcon" width="30" height="30" style="width:50%; height:50%;" src="../Icons/SkipIcon.svg" alt="Previous Song"/>
@@ -111,8 +113,8 @@
             </tbody>
         </table>
 
-        <datalist id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option></datalist>
-        <datalist id="commonPanValues"><option value="-1"></option><option value="-0.5"></option><option value="0"></option><option value="0.5"></option><option value="1"></option></datalist>
+        <datalist style="display: none" id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option></datalist>
+        <datalist style="display: none" id="commonPanValues"><option value="-1"></option><option value="-0.5"></option><option value="0"></option><option value="0.5"></option><option value="1"></option></datalist>
         
         <dialog id="settingsPage">
             <div>
@@ -141,17 +143,29 @@
             <div>
                 <img class="clickableButton" id="exitErrorPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
                 <div>
-                    <p>Sound Loading Errors:</p>
+                    <h1>Errors:</h1>
                     <dl id="errorList"></dl>
                 </div>
             </div>
         </dialog>
         <dialog id="deprecatedPopup">
-            <img class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
             <div>
-                THIS WEBSITE URL IS INACTIVE AND COULD POSSIBLY BREAK IN THE FUTURE. THE NEW LINK IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
+                <table style="width: 100%;">
+                    <tbody>
+                        <tr>
+                            <th style="text-align: center;">
+                                <img class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg">
+                                <h1>DEPRECATED</h1>
+                            </th>
+                        </tr>
+                        <tr>
+                            <td>
+                                THIS WEBSITE URL IS INACTIVE AND COULD POSSIBLY BREAK IN THE FUTURE. THE NEW LINK IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            
         </dialog>
 
         <div id="rightClickContextMenu" open="false">
