--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Choose Player</title>
     <link rel="icon" href="Icons/PageFavicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="ServiceWorker.js"></script> -->
     <link rel="stylesheet" href="CSS/background.css">
     <script>
-      if ("serviceWorker" in navigator) {
+      const SITE_DEPRECATED = document.URL.toLowerCase().includes('codehs');
+      if ("serviceWorker" in navigator && !SITE_DEPRECATED) {
         navigator.serviceWorker.register("ServiceWorker.js");
       }
     </script>
@@ -16,6 +16,6 @@
   <body>
     <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/WebLooper.html">Web Looper</a></font></h1></center> <div></div>
     <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/PlaylistCreator.html">Playlist Creator</a></font></h1></center> <div></div>
-    <h5><center><font id="poweredByText" style="color:black; font-family: Cascadia Code">Powered by Howler.js</font></center></h5>
+    <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com">Powered by Howler.js</a></h5>
   </body>
 </html>
