Add reordering files toggle so mobile users can also use songs' right click menu.

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -136,6 +136,9 @@
                 <div>
                     <input type="checkbox" id="skipUnplayable" checked><label for="skipUnplayable">Skip files that are unsupported</label>
                 </div>
+                <div>
+                    <input type="checkbox" id="reorderFiles"><label for="reorderFiles">Allow reordering files</label>
+                </div>
                 <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
             </div>
         </dialog>
