Powered by Howler.js text now opens in new tab

--- a/HTML/WebLooper.html
+++ b/HTML/WebLooper.html
@@ -17,7 +17,7 @@
                 <font style="color:black; font-family: Cambria">Web Looper</font>
             </h1>
             <h5 style="text-align: center;">
-                <a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com">Powered by Howler.js</a>
+                <a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a>
             </h5>
 
             <input type="file" style="margin-left:5px; margin-right:5px; width:90px; color:transparent;" multiple=true title="Drag audios here to batch upload them!" id="batchUpload"/>
