--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <body>
     <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/WebLooper.html">Web Looper</a></font></h1></center> <div></div>
     <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/PlaylistCreator.html">Playlist Creator</a></font></h1></center> <div></div>
-    <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com">Powered by Howler.js</a></h5>
+    <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a></h5>
   </body>
 </html>
