--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -10,12 +10,12 @@
         <link rel="stylesheet" href="../CSS/PlaylistCreator.css">
         <!-- <link rel="stylesheet" id="compactModeStyleLink" href="../CSS/CompactMode.css" disabled> -->
         <link rel="stylesheet" href="../CSS/background.css">
-        <!-- August 27, 2023, 12:33AM -->
+        <link rel="prefetch" href="../Icons/RepeatIcon.svg" as="image">
+        <link rel="prefetch" href="../Icons/Repeat1Icon.svg" as="image">
+
     </head>
     <body>
-        <img src="../Icons/RepeatIcon.svg" style="display: none;">
-        <img src="../Icons/Repeat1Icon.svg" style="display: none;">
-        <div draggingOver="false" id="dragOverDisplay" class="hoverToDrop"><<text style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);"><b>Drop Here to add Music</b></text></div>
+        <div draggingOver="false" id="dragOverDisplay" class="hoverToDrop"><text style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);"><b>Drop Here to add Music</b></text></div>
         <div style="z-index: -2; background-color: lightgrey; width: max-content; margin-top: 20px; left: -9999px; position: absolute; pointer-events: none;" id="hoveredTimeDisplay" inuse="0"><text style="margin-left:1ch; margin-right:1ch; color: black;" class="prevent-select"></text></div>
 
         <input type="file" style="display: none;" id="0input" multiple>
@@ -61,7 +61,7 @@
                 <tr>
                     <td width=20%>
                         <input type="checkbox" style="visibility: hidden; position: absolute;" id="repeatButton" class="repeatButton" title="Activate to repeat the current song indefinitely">
-                        <label for="repeatButton"><img class="clickableButton repeatIcon" enabledVersion="false" alt="Loop Song Toggle" src="../Icons/RepeatIcon.svg"/><!--<img class="clickableButton repeatIcon" enabledVersion="true" alt="Loop Song Enabled" src="../Icons/Repeat1Icon.svg"/>--></label> <!-- (was remixed) https://www.svgrepo.com/svg/523665/repeat; https://www.svgrepo.com/svg/523664/repeat-one; -->
+                        <label for="repeatButton"><img id="repeatButtonImg" class="clickableButton repeatIcon" enabledVersion="false" alt="Loop Song Toggle" src="../Icons/RepeatIcon.svg"/><!--<img class="clickableButton repeatIcon" enabledVersion="true" alt="Loop Song Enabled" src="../Icons/Repeat1Icon.svg"/>--></label> <!-- (was remixed) https://www.svgrepo.com/svg/523665/repeat; https://www.svgrepo.com/svg/523664/repeat-one; -->
                         <input type="checkbox" style="visibility: hidden; position: absolute;" class="shuffle" id="shuffleButton" title="Activate to play the songs in a random order.">
                         <label for="shuffleButton"><svg class="clickableButton" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" width="50%" height="50%" xml:space="preserve"><path d="M83.745,69.516l-8.181,5.666V67.08c0,0-9.253,0-10.93,0c-15.551,0-29.989-27.566-41.66-27.566H8.069v-6.542h14.906  c18.125,0,29.063,27.65,41.66,27.65c1.76,0,10.93,0,10.93,0V52.52l8.181,5.666l8.186,5.665L83.745,69.516z"/><path d="M50.619,45.877c0.375,0.396,0.749,0.794,1.123,1.19c4.344-4.354,8.521-7.69,12.894-7.69c1.76,0,10.93,0,10.93,0v8.103  l8.181-5.666l8.186-5.666l-8.186-5.666l-8.181-5.665v8.102c0,0-9.253,0-10.93,0c-6.048,0-11.926,4.172-17.539,9.269  C48.298,43.419,49.472,44.659,50.619,45.877z"/><path d="M37.986,54.719c-0.633-0.626-1.276-1.261-1.923-1.894c-4.649,4.337-9.037,7.661-13.088,7.661H8.069v6.541h14.906  c6.979,0,12.889-4.103,18.243-9.145C40.123,56.824,39.044,55.763,37.986,54.719z"/></svg></label> <!-- https://commons.wikimedia.org/wiki/File:Shuffle_(50683)_-_The_Noun_Project.svg -->
                     </td>
