change inactive URL text

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -158,12 +158,12 @@
                         <tr>
                             <th style="text-align: center;">
                                 <img class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg">
-                                <h1>DEPRECATED</h1>
+                                <h1>INACTIVE</h1>
                             </th>
                         </tr>
                         <tr>
                             <td>
-                                THIS WEBSITE URL IS INACTIVE AND COULD POSSIBLY BREAK IN THE FUTURE. THE NEW LINK IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
+                                THIS URL IS OUT OF DATE AND COULD BREAK IN THE FUTURE. THE NEW VERSION IS LOCATED AT <a href="https://cosyhamster.github.io">https://cosyhamster.github.io</a>
                             </td>
                         </tr>
                     </tbody>
