create border around filters to create better designation

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -24,12 +24,14 @@
         <script src="cosStatList.js" defer></script>
     </head>
     <body>
-        <div id="filterConfigurations">
-            <p style="font-weight: bold;margin-bottom: 0;">Filters</p>
-        </div>
-        <div style="margin-bottom: 15px;">
-            <button id="applyFilters">Submit Filter Changes</button>
-            <button id="createFilter">Add Filter</button>
+        <div style="border: 1px solid black; margin-bottom: 15px;">
+            <div id="filterConfigurations">
+                <p style="font-weight: bold;margin: 0;">Filters</p>
+            </div>
+            <div style="">
+                <button id="applyFilters">Submit Filter Changes</button>
+                <button id="createFilter">Add Filter</button>
+            </div>
         </div>
 
         <div>
