Dialogs now become inert when closed (why doesn't the browser do this itself?) Clicking the playlist no longer scrolls the page up, and pressing Enter on a song doesn't unselect it anymore. Attempt to fix dialogs scrolling page horizontally. Tabbing to playlist now scrolls to currently selected song row. (Need to add right clicking song rows using menu key)

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -116,7 +116,7 @@
         <datalist style="display: none" id="commonVolumesAndRates"><option value="0"></option><option value="0.25"></option><option value="0.5"></option><option value="0.75"></option><option value="1"></option><option value="1.25"></option><option value="1.5"></option><option value="1.75"></option><option value="2"></option></datalist>
         <datalist style="display: none" id="commonPanValues"><option value="-1"></option><option value="-0.5"></option><option value="0"></option><option value="0.5"></option><option value="1"></option></datalist>
         
-        <dialog id="settingsPage">
+        <dialog id="settingsPage" inert>
             <div>
                 <img class="clickableButton" id="exitSettingsButton" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
                 <div>
@@ -148,7 +148,7 @@
                 <div style="text-align:left"><a href="../HTML/WebLooper.html">Web Looper</a></div>
             </div>
         </dialog>
-        <dialog id="errorPopup">
+        <dialog id="errorPopup" inert>
             <div>
                 <img tabindex="0" class="clickableButton" id="exitErrorPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
                 <div>
@@ -157,7 +157,7 @@
                 </div>
             </div>
         </dialog>
-        <dialog id="deprecatedPopup">
+        <dialog id="deprecatedPopup" inert>
             <div>
                 <table style="width: 100%;">
                     <tbody>
