--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -23,11 +23,9 @@
             }
             
             .hoverable:hover{ background-color: rgb(200, 200, 200); }
-            .focusable:focus{ border: black solid 1px; }
-            .focusable:focus-visible{ border: black solid 1px; }
-            table{
-                border-collapse: collapse;
-            }
+            .focusable:focus{ outline: black solid 1px; }
+            .focusable:focus-visible{ outline: black solid 1px; }
+            
             .creatureTableRow{
                 text-align: center;
                 text-wrap: nowrap;
