--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=0.5">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=0.5" />
+        <link rel="manifest" href="/manifest.json" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <script src="cosStatList.js" defer></script>
         
         <style>
@@ -31,7 +34,9 @@
                 text-wrap: nowrap;
             }
             .creatureStatHeaderCell{
-                text-wrap: nowrap; user-select: none; cursor: cell;
+                text-wrap: nowrap;
+                user-select: none;
+                cursor: cell;
             }
             .creatureStatCell{
                 max-width: 50vw;
