--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <title>Choose Player</title>
     <link rel="icon" href="Icons/PageFavicon.ico">
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="CSS/background.css">
     <script>
       const SITE_DEPRECATED = document.URL.toLowerCase().includes('codehs');
