--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -3,7 +3,10 @@
     <head>
         <title>Web Playlist Creator</title>
         <link rel="icon" href="../Icons/PageFavicon.ico">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="manifest" href="/manifest.json" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="mobile-web-app-capable" content="yes" />
         <script defer src="../Javascript/PlaylistCreator.js"></script>
         <!-- <script defer src="../howler.js"></script> -->
         <!-- <script src="../ServiceWorker.js"></script> -->
