--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=0.5" />
-        <link rel="manifest" href="/manifest.json" />
+        <link rel="manifest" href="../manifest.json" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <script src="cosStatList.js" defer></script>
