--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+        <meta charset="utf-8">
+        <title>COS Stat List</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=0.5" />
         <link rel="manifest" href="../manifest.json" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -24,10 +27,6 @@
                 background-color: rgb(255, 255, 255);
                 box-shadow: 0 5px 5px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
             }
-            
-            .hoverable:hover{ background-color: rgb(200, 200, 200); }
-            .focusable:focus{ outline: black solid 1px; }
-            .focusable:focus-visible{ outline: black solid 1px; }
             
             #statList{
                 border-width: 1px;
@@ -55,6 +54,9 @@
                 overflow-x: auto;
                 scrollbar-width: thin;
             }
+            .hoverable:hover{ background-color: rgb(200, 200, 200); }
+            .focusable:focus{ outline: black solid 1px; }
+            .focusable:focus-visible{ outline: black solid 1px; }
         </style>
     </head>
     <body>
@@ -80,7 +82,7 @@
         </table>
 
         <div id="floatingWindow" style="position:relative;width: max-content;max-width:75vw;height: 50vh;background-color:white;display: none;overflow:scroll;border:gray solid 1px;">
-            <img class="clickableButton" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/>
+            <img class="clickableButton" tabindex="0" style="z-index: 2; border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/>
             <input type="search" id="floatingWindowSearchBar" placeholder="Search...">
             <table id="floatingWindowTable" style="width: calc(100% - 20px);">
                 <tbody></tbody>
