--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -21,11 +21,11 @@
         <div id="dragOverDisplay" class="hoverToDrop"><div style="position: fixed; top: 50vh; left: 50vw; transform: translate(-50%, -50%);" class="text" ><b>Drop Here to add Music</b></div></div>
         <div style="z-index: -2; background-color: lightgrey; width: max-content; margin-top: 20px; left: -9999px; position: absolute; pointer-events: none;" id="hoveredTimeDisplay"><div style="margin-left:1ch; margin-right:1ch; color: black;" class="prevent-select text"></div></div>
 
-        <input type="file" style="display: none;" id="0input" multiple>
-        <input type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
+        <input accept="audio/*" type="file" style="display: none;" id="0input" multiple>
+        <input accept="audio/*" type="file" style="display: none;" id="inputDirectory" multiple webkitdirectory>
         <label for="0input"><img id="uploadFilesLabel" class="clickableButton" tabindex="0" data-onRightClick="uploadFileMenu" src="../Icons/UploadIcon.svg" width=20 height=20 alt=""/></label> <!--https://commons.wikimedia.org/wiki/File:OOjs_UI_icon_upload.svg-->
         <div style="cursor: pointer;" tabindex="0" class="largerSize songName playingStatus text" id="currentFileName">Upload Files to Begin!</div>
-        <img tabindex="0" class="clickableButton" id="settingsButton" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+        <img tabindex="0" class="clickableButton" id="settingsButton" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
 
         <table border=1px style="position: absolute; width:calc(100% - 20px); top:40vh; transform: translate(0%, 0%); z-index: -2;">
             <tbody>
@@ -54,23 +54,23 @@
                             </div>
                         </label>
                     </td>
-                    <td id="seekForward" tabindex="0" seekDirection=1 class="cell clickableButton" width=20%>
+                    <td id="seekForward" tabindex="0" seekDirection=1 class="cell clickableButton" style="width: 20%">
                         <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%; transform: scaleX(-1);" src="../Icons/SeekIcon.svg" alt="Seek Forwards"/>
                     </td>
-                    <td id="skipForward" tabindex="0" class="cell clickableButton" width=20%>
+                    <td id="skipForward" tabindex="0" class="cell clickableButton" style="width: 20%">
                         <img class="playBackIcon" width="30" height="30" style="width:50%; height:50%; transform: scaleX(-1);" src="../Icons/SkipIcon.svg" alt="Next Song"/>
                     </td>
                 </tr>
                 <tr>
-                    <td width=20%>
+                    <td style="width: 20%">
                         <input type="checkbox" style="visibility: hidden; position: absolute;" id="repeatButton" class="repeatButton" title="Activate to repeat the current song indefinitely">
                         <label for="repeatButton" tabindex="0"><img id="repeatButtonImg" class="clickableButton repeatIcon" enabledVersion="false" alt="Loop Song Toggle" src="../Icons/RepeatIcon.svg"/><!--<img class="clickableButton repeatIcon" enabledVersion="true" alt="Loop Song Enabled" src="../Icons/Repeat1Icon.svg"/>--></label> <!-- (was remixed) https://www.svgrepo.com/svg/523665/repeat; https://www.svgrepo.com/svg/523664/repeat-one; -->
                         <input type="checkbox" style="visibility: hidden; position: absolute;" class="shuffle" id="shuffleButton" title="Activate to play the songs in a random order.">
                         <label for="shuffleButton" tabindex="0"><svg class="clickableButton" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" width="50%" height="50%" xml:space="preserve"><path d="M83.745,69.516l-8.181,5.666V67.08c0,0-9.253,0-10.93,0c-15.551,0-29.989-27.566-41.66-27.566H8.069v-6.542h14.906  c18.125,0,29.063,27.65,41.66,27.65c1.76,0,10.93,0,10.93,0V52.52l8.181,5.666l8.186,5.665L83.745,69.516z"/><path d="M50.619,45.877c0.375,0.396,0.749,0.794,1.123,1.19c4.344-4.354,8.521-7.69,12.894-7.69c1.76,0,10.93,0,10.93,0v8.103  l8.181-5.666l8.186-5.666l-8.186-5.666l-8.181-5.665v8.102c0,0-9.253,0-10.93,0c-6.048,0-11.926,4.172-17.539,9.269  C48.298,43.419,49.472,44.659,50.619,45.877z"/><path d="M37.986,54.719c-0.633-0.626-1.276-1.261-1.923-1.894c-4.649,4.337-9.037,7.661-13.088,7.661H8.069v6.541h14.906  c6.979,0,12.889-4.103,18.243-9.145C40.123,56.824,39.044,55.763,37.986,54.719z"/></svg></label> <!-- https://commons.wikimedia.org/wiki/File:Shuffle_(50683)_-_The_Noun_Project.svg -->
                     </td>
-                    <td width=20% tabindex="0" style="position: relative;">
+                    <td style="position: relative; width: 20%" tabindex="0">
                     </td>
-                    <td width=20% style="position: relative;">
+                    <td style="position: relative; width: 20%">
                         <img class="playBackIcon" src="../Icons/HeadphonesIcon.svg" alt="Pan Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, -50%)"> <!--https://www.svgrepo.com/svg/103147/headphone-->
                         <div tabindex="0" class="pullsOpen" style="visibility: visible; position: absolute; width: 100%; height: 100%; bottom: 50%; transform: translate(0, 50%);">
                             <div>
@@ -79,16 +79,16 @@
                             </div>
                         </div>
                     </td>
-                    <td width=20% style="position: relative;">
+                    <td style="position: relative; width: 20%">
                         <img class="playBackIcon" src="../Icons/PlaybackSpeedIcon.svg" alt="Playback Speed Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, -50%);"><!--https://www.svgrepo.com/svg/76295/download-speed-->
                         <div tabindex="0" class="pullsOpen" style="visibility: visible; position: absolute; width: 100%; height: 100%; bottom: 50%; transform: translate(0, 50%);">
                             <div>
                                 <input type="range" id="0playRateSlider" list='commonVolumesAndRates' max=2 min=0 value=1 step=0.01 style="writing-mode: vertical-lr; direction: rtl; position: absolute; width: 100%; height: calc(100% - 38.98px); max-height: calc(50% - 19.49px); top: calc(25% + 9.745px); left: 50%; transform: translate(-50%, -50%);" />
-                                <input type="number" style="width: calc(100% - 7.61px)" class="playRate" id="0playRate" value="1" step="0.01" min="0" inputmode="numeric"></input>
+                                <input type="number" style="width: calc(100% - 7.61px)" class="playRate" id="0playRate" value="1" step="0.01" min="0" inputmode="numeric">
                             </div>
                         </div>
                     </td>
-                    <td class="clickableButton" width=20% style="position: relative;">
+                    <td class="clickableButton" style="position: relative; width: 20%">
                         <input style="display: none;" class="muteCheckbox" type="checkbox" id="0Mute">
                         <label for="0Mute" style="cursor: pointer;">
                             <!-- <img  src="../Icons/SpeakerIcon.svg" alt="Volume Changer & Mute Button"/> -->
@@ -104,7 +104,7 @@
                 </tr>
                 <tr>
                     <td colspan=5>
-                        <table tabindex="0" style="width:100%" border=1px id="Playlist_Viewer">
+                        <table tabindex="0" style="width:100%; border: 1px" id="Playlist_Viewer">
                             <tbody>
                                 <tr>
                                     <th>Playlist</th>
@@ -121,7 +121,7 @@
         
         <dialog id="settingsPage" inert>
             <div>
-                <img class="clickableButton" id="exitSettingsButton" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+                <img class="clickableButton" id="exitSettingsButton" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
                 <div>
                     Preload Type: <select id="preloadType" name="preloadType">
                         <option value="process" selected>Download & Process</option>
@@ -153,7 +153,7 @@
         </dialog>
         <dialog id="errorPopup" inert>
             <div>
-                <img tabindex="0" class="clickableButton" id="exitErrorPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
+                <img tabindex="0" class="clickableButton" id="exitErrorPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
                 <div>
                     <h1>Errors:</h1>
                     <dl id="errorList"></dl>
@@ -166,7 +166,7 @@
                     <tbody>
                         <tr>
                             <th style="text-align: center;">
-                                <img tabindex="0" class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg">
+                                <img tabindex="0" class="clickableButton" id="exitDeprecatedPopup" style="border-radius: 8px; float: right; width: 20px; height: 20px;" src="../Icons/CancelIcon.svg" alt="Exit">
                                 <h1>INACTIVE</h1>
                             </th>
                         </tr>
