--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/WebLooper.html">Web Looper</a></font></h1></center> <div></div>
-    <center><h1 style="border:1px solid black; background-color:white"><font style="color:black; font-family: Cambria"><a href="HTML/PlaylistCreator.html">Playlist Creator</a></font></h1></center> <div></div>
+    <div style="text-align: center;"><h1 style="border:1px solid black; background-color:white; color:black; font-family: Cambria,serif"><a href="HTML/WebLooper.html">Web Looper</a></h1></div>
+    <div style="text-align: center;"><h1 style="border:1px solid black; background-color:white; color:black; font-family: Cambria,serif"><a href="HTML/PlaylistCreator.html">Playlist Creator</a></h1></div>
     <h5 style="text-align: center;"><a id="poweredByText" style="color:black; font-family: Cascadia Code;" href="https://howlerjs.com" target="_blank">Powered by Howler.js</a></h5>
   </body>
 </html>
