--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -27,11 +27,11 @@
         <div style="cursor: pointer;" tabindex="0" class="largerSize songName playingStatus text" id="currentFileName">Upload Files to Begin!</div>
         <img tabindex="0" class="clickableButton" id="settingsButton" width=20 height=20 style="float: right;" src="../Icons/SettingsIcon.svg" alt="Settings"/> <!--https://en.m.wikipedia.org/wiki/File:Ic_settings_48px.svg-->
 
-        <table border=1px style="position: absolute; width:calc(100% - 20px); top:40vh; transform: translate(0%, 0%); z-index: -2;">
+        <table style="position: absolute; border: 1px solid black; width: calc(100% - 20px); top: calc(40vh - 10ch); transform: translate(0%, 0%); z-index: -2;">
             <tbody>
                 <tr>
-                    <td style="position: absolute; width:100%; white-space: nowrap; transform: translate(0%, -100%); height: 10ch;">
-                        <div style="margin-left: auto; margin-right: auto; text-align: center;">
+                    <td style="white-space: nowrap; height: 10ch;" colspan="5" class="tableBorder">
+                        <div style="height: 100%; margin-left: auto; margin-right: auto; text-align: center;">
                             <div class="fileStatus" id="0status"></div>
                             <div id="firstDurationLabel" style="margin-right: 1ch;" class="text">00:00</div>
                             <progress value="0" max="100" id="progress-bar" style="accent-color:white; z-index: 0;"></progress>
@@ -40,13 +40,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td id="skipBack" tabindex="0" class="cell clickableButton" width=20%>
+                    <td id="skipBack" tabindex="0" class="cell clickableButton tableBorder" width=20%>
                         <img class="playBackIcon" width="30" height="30" style="width:50%; height:50%;" src="../Icons/SkipIcon.svg" alt="Previous Song"/>
                     </td>
-                    <td id="seekBack" tabindex="0" seekDirection=-1 class="cell clickableButton" width=20%>
+                    <td id="seekBack" tabindex="0" seekDirection=-1 class="cell clickableButton tableBorder" width=20%>
                         <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%" src="../Icons/SeekIcon.svg" alt="Seek Backwards"/>
                     </td>
-                    <td tabindex="0" class="cell clickableButton" width=20%>
+                    <td tabindex="0" class="cell clickableButton tableBorder" width=20%>
                         <label for="playpause" class="clickableButton">
                             <div class="playpause">
                                 <input type="checkbox" class="playpause" id="playpause" />
@@ -54,23 +54,23 @@
                             </div>
                         </label>
                     </td>
-                    <td id="seekForward" tabindex="0" seekDirection=1 class="cell clickableButton" style="width: 20%">
+                    <td id="seekForward" tabindex="0" seekDirection=1 class="cell clickableButton tableBorder" style="width: 20%">
                         <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%; transform: scaleX(-1);" src="../Icons/SeekIcon.svg" alt="Seek Forwards"/>
                     </td>
-                    <td id="skipForward" tabindex="0" class="cell clickableButton" style="width: 20%">
+                    <td id="skipForward" tabindex="0" class="cell clickableButton tableBorder" style="width: 20%">
                         <img class="playBackIcon" width="30" height="30" style="width:50%; height:50%; transform: scaleX(-1);" src="../Icons/SkipIcon.svg" alt="Next Song"/>
                     </td>
                 </tr>
                 <tr>
-                    <td style="width: 20%">
+                    <td style="width: 20%" class="tableBorder">
                         <input type="checkbox" style="visibility: hidden; position: absolute;" id="repeatButton" class="repeatButton" title="Activate to repeat the current song indefinitely">
                         <label for="repeatButton" tabindex="0"><img id="repeatButtonImg" class="clickableButton repeatIcon" enabledVersion="false" alt="Loop Song Toggle" src="../Icons/RepeatIcon.svg"/><!--<img class="clickableButton repeatIcon" enabledVersion="true" alt="Loop Song Enabled" src="../Icons/Repeat1Icon.svg"/>--></label> <!-- (was remixed) https://www.svgrepo.com/svg/523665/repeat; https://www.svgrepo.com/svg/523664/repeat-one; -->
                         <input type="checkbox" style="visibility: hidden; position: absolute;" class="shuffle" id="shuffleButton" title="Activate to play the songs in a random order.">
                         <label for="shuffleButton" tabindex="0"><svg class="clickableButton" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" width="50%" height="50%" xml:space="preserve"><path d="M83.745,69.516l-8.181,5.666V67.08c0,0-9.253,0-10.93,0c-15.551,0-29.989-27.566-41.66-27.566H8.069v-6.542h14.906  c18.125,0,29.063,27.65,41.66,27.65c1.76,0,10.93,0,10.93,0V52.52l8.181,5.666l8.186,5.665L83.745,69.516z"/><path d="M50.619,45.877c0.375,0.396,0.749,0.794,1.123,1.19c4.344-4.354,8.521-7.69,12.894-7.69c1.76,0,10.93,0,10.93,0v8.103  l8.181-5.666l8.186-5.666l-8.186-5.666l-8.181-5.665v8.102c0,0-9.253,0-10.93,0c-6.048,0-11.926,4.172-17.539,9.269  C48.298,43.419,49.472,44.659,50.619,45.877z"/><path d="M37.986,54.719c-0.633-0.626-1.276-1.261-1.923-1.894c-4.649,4.337-9.037,7.661-13.088,7.661H8.069v6.541h14.906  c6.979,0,12.889-4.103,18.243-9.145C40.123,56.824,39.044,55.763,37.986,54.719z"/></svg></label> <!-- https://commons.wikimedia.org/wiki/File:Shuffle_(50683)_-_The_Noun_Project.svg -->
                     </td>
-                    <td style="position: relative; width: 20%" tabindex="0">
+                    <td style="position: relative; width: 20%" class="tableBorder" tabindex="0">
                     </td>
-                    <td style="position: relative; width: 20%">
+                    <td style="position: relative; width: 20%" class="tableBorder">
                         <img class="playBackIcon" src="../Icons/HeadphonesIcon.svg" alt="Pan Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, -50%)"> <!--https://www.svgrepo.com/svg/103147/headphone-->
                         <div tabindex="0" class="pullsOpen" style="visibility: visible; position: absolute; width: 100%; height: 100%; bottom: 50%; transform: translate(0, 50%);">
                             <div>
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </td>
-                    <td style="position: relative; width: 20%">
+                    <td style="position: relative; width: 20%" class="tableBorder">
                         <img class="playBackIcon" src="../Icons/PlaybackSpeedIcon.svg" alt="Playback Speed Changer" style="width:100%; height:100%; position: absolute; left:50%; transform: translate(-50%, -50%);"><!--https://www.svgrepo.com/svg/76295/download-speed-->
                         <div tabindex="0" class="pullsOpen" style="visibility: visible; position: absolute; width: 100%; height: 100%; bottom: 50%; transform: translate(0, 50%);">
                             <div>
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </td>
-                    <td class="clickableButton" style="position: relative; width: 20%">
+                    <td class="clickableButton tableBorder" style="position: relative; width: 20%">
                         <input style="display: none;" class="muteCheckbox" type="checkbox" id="0Mute">
                         <label for="0Mute" style="cursor: pointer;">
                             <!-- <img  src="../Icons/SpeakerIcon.svg" alt="Volume Changer & Mute Button"/> -->
