remove the deprecated width attributes too

--- a/HTML/PlaylistCreator.html
+++ b/HTML/PlaylistCreator.html
@@ -40,13 +40,13 @@
                     </td>
                 </tr>
                 <tr>
-                    <td id="skipBack" tabindex="0" class="cell clickableButton tableBorder" width=20%>
+                    <td id="skipBack" tabindex="0" class="cell clickableButton tableBorder" style="width: 20%">
                         <img class="playBackIcon" width="30" height="30" style="width:50%; height:50%;" src="../Icons/SkipIcon.svg" alt="Previous Song"/>
                     </td>
-                    <td id="seekBack" tabindex="0" seekDirection=-1 class="cell clickableButton tableBorder" width=20%>
+                    <td id="seekBack" tabindex="0" seekDirection=-1 class="cell clickableButton tableBorder" style="width: 20%">
                         <img class="playBackIcon" width="60" height="30" style="width:100%; height:100%" src="../Icons/SeekIcon.svg" alt="Seek Backwards"/>
                     </td>
-                    <td tabindex="0" class="cell clickableButton tableBorder" width=20%>
+                    <td tabindex="0" class="cell clickableButton tableBorder" style="width: 20%">
                         <label for="playpause" class="clickableButton">
                             <div class="playpause">
                                 <input type="checkbox" class="playpause" id="playpause" />
