actions that require the stat table to be updated are no longer clickable during browser freeze to prevent multiple queued html reforms that freeze the application

--- a/COSSTATLIST/cosStatList.html
+++ b/COSSTATLIST/cosStatList.html
@@ -43,7 +43,7 @@
                 /* width: 25ch; */
                 text-wrap: nowrap;
                 overflow-x: auto;
-                scrollbar-width: thin;
+                scrollbar-width: none;/*thin;*/
                 user-select: none;
                 cursor: cell;
             }
@@ -52,7 +52,7 @@
                 /* width: 25ch; */
                 text-wrap: nowrap;
                 overflow-x: auto;
-                scrollbar-width: thin;
+                scrollbar-width: none;/*thin;*/
             }
             .hoverable:hover{ background-color: rgb(200, 200, 200); }
             .focusable:focus{ outline: black solid 1px; }
